// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.text-area-tpl > render auto-width text-area 1`] = `
.c7 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  display: none;
  margin: -1px !important;
}

.c7 * {
  width: 1px;
  height: 1px;
}

.c6 {
  color: rgb(77, 77, 77);
  display: inline-block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1.45;
  text-transform: none;
  margin: 0px 0px 4px;
  align-self: center;
}

.c6:empty {
  display: none;
}

.c13 {
  color: rgb(97, 111, 124);
  display: block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  line-height: 1.25;
  margin: 4px 0px 0px;
  width: fit-content;
}

.c12 {
  display: flex;
}

.c10 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c10::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c8 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  box-shadow: rgb(89, 102, 115) 0px 1px 0px 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
}

.c14 .c1 {
  display: flex;
  width: 100%;
}

.c0 {
  display: inline-flex;
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
}

.c0 * {
  max-width: 100%;
}

.c15 .c5 {
  display: block;
  width: fit-content;
}

.c4 {
  box-sizing: border-box;
  display: inline-block;
}

.c4 .c5 {
  display: block;
  width: fit-content;
}

.c2 {
  display: inline-flex;
}

.c2 .c3 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c9 {
  height: auto;
}

.c11 {
  height: 100px;
  padding: calc(16px - 0.54375rem) 12px;
  resize: vertical;
  max-height: 100px;
  min-height: 32px;
  min-width: 0px;
}

@media (pointer: coarse) {
  .c8:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c8:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

<div
  class="c0 field-wrapper"
  data-role="textarea"
>
  <div
    class="c1 c2 field__main"
  >
    <div
      class="c3 c4 field"
      data-role="textarea-control"
    >
      <label
        class="c5 c6 label field__label"
        data-role="textarea-label"
      >
        Test Label
        <span
          class="c7 -u-unseenButRead"
          data-role="hidden-text"
        >
          , Test placeholder
        </span>
      </label>
      <div
        class="c8 c9 field__input field__input--textarea"
      >
        <textarea
          autocomplete="off"
          class="c10 c11 field__text"
          data-role="textarea-input"
          placeholder="Test placeholder"
        >
          Test value
        </textarea>
      </div>
    </div>
  </div>
  <div
    class="c12 field__helper"
  >
    <label
      class="c13 field__helper-text"
      data-role="textarea-helper-text"
    >
      Test Helper Text
    </label>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.text-area-tpl > render basic text-area 1`] = `
.c7 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  display: none;
  margin: -1px !important;
}

.c7 * {
  width: 1px;
  height: 1px;
}

.c6 {
  color: rgb(77, 77, 77);
  display: inline-block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1.45;
  text-transform: none;
  margin: 0px 0px 4px;
  align-self: center;
}

.c6:empty {
  display: none;
}

.c13 {
  color: rgb(97, 111, 124);
  display: block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  line-height: 1.25;
  margin: 4px 0px 0px;
  width: fit-content;
}

.c12 {
  display: flex;
}

.c10 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c10::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c8 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  box-shadow: rgb(89, 102, 115) 0px 1px 0px 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
}

.c0 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c0 .c1 {
  display: flex;
  width: 100%;
}

.c0 * {
  max-width: 100%;
}

.c4 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c4 .c5 {
  display: block;
  width: fit-content;
}

.c2 {
  display: inline-flex;
}

.c2 .c3 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c9 {
  height: auto;
}

.c11 {
  height: 100px;
  padding: calc(16px - 0.54375rem) 12px;
  resize: vertical;
  max-height: 100px;
  min-height: 32px;
  min-width: 0px;
}

@media (pointer: coarse) {
  .c8:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c8:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

<div
  class="c0 field-wrapper field-wrapper--block"
  data-role="textarea"
>
  <div
    class="c1 c2 field__main"
  >
    <div
      class="c3 c4 field"
      data-role="textarea-control"
    >
      <label
        class="c5 c6 label field__label"
        data-role="textarea-label"
      >
        Test Label
        <span
          class="c7 -u-unseenButRead"
          data-role="hidden-text"
        >
          , Test placeholder
        </span>
      </label>
      <div
        class="c8 c9 field__input field__input--textarea"
      >
        <textarea
          autocomplete="off"
          class="c10 c11 field__text"
          data-role="textarea-input"
          placeholder="Test placeholder"
        >
          Test value
        </textarea>
      </div>
    </div>
  </div>
  <div
    class="c12 field__helper"
  >
    <label
      class="c13 field__helper-text"
      data-role="textarea-helper-text"
    >
      Test Helper Text
    </label>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.text-area-tpl > render disabled text-area 1`] = `
.c8 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c8::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c6 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
  background-color: rgb(226, 230, 233);
  box-shadow: rgb(169, 179, 188) 0px 1px 0px 0px;
  color: rgb(169, 179, 188);
}

.c10 .c1 {
  display: flex;
  width: 100%;
}

.c0 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c0 .c1 {
  display: flex;
  width: 100%;
}

.c0 * {
  max-width: 100%;
}

.c0[class*="h_"] .c5 {
  background-color: rgb(226, 230, 233) !important;
  color: rgb(169, 179, 188) !important;
}

.c4 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c2 {
  display: inline-flex;
}

.c2 .c3 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c7 {
  height: auto;
}

.c9 {
  height: 100px;
  padding: calc(16px - 0.54375rem) 12px;
  resize: vertical;
  max-height: 100px;
  min-height: 32px;
  min-width: 0px;
}

<div
  class="c0 field-wrapper field-wrapper--block"
  data-role="textarea"
>
  <div
    class="c1 c2 field__main"
  >
    <div
      class="c3 c4 field"
      data-role="textarea-control"
    >
      <div
        class="c5 c6 c7 field__input field__input--textarea field__input--disabled"
        data-disabled="true"
      >
        <textarea
          autocomplete="off"
          class="c8 c9 field__text"
          data-role="textarea-input"
          disabled=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.text-area-tpl > render readonly text-area 1`] = `
.c7 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c7::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c5 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
  background-color: rgb(241, 242, 244);
  box-shadow: none;
}

.c0 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c0 .c1 {
  display: flex;
  width: 100%;
}

.c0 * {
  max-width: 100%;
}

.c4 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c2 {
  display: inline-flex;
}

.c2 .c3 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c6 {
  height: auto;
}

.c8 {
  height: 100px;
  padding: calc(16px - 0.54375rem) 12px;
  resize: vertical;
  max-height: 100px;
  min-height: 32px;
  min-width: 0px;
}

<div
  class="c0 field-wrapper field-wrapper--block"
  data-role="textarea"
>
  <div
    class="c1 c2 field__main"
  >
    <div
      class="c3 c4 field"
      data-role="textarea-control"
    >
      <div
        class="c5 c6 field__input field__input--textarea field__input--readonly"
        data-readonly="true"
      >
        <textarea
          autocomplete="off"
          class="c7 c8 field__text"
          data-role="textarea-input"
          readonly=""
          tabindex="-1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.text-area-tpl > render readonly with value text-area 1`] = `
.c7 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c7::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c5 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
  background-color: rgb(241, 242, 244);
  box-shadow: none;
}

.c0 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c0 .c1 {
  display: flex;
  width: 100%;
}

.c0 * {
  max-width: 100%;
}

.c4 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c2 {
  display: inline-flex;
}

.c2 .c3 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c6 {
  height: auto;
}

.c8 {
  height: 100px;
  padding: calc(16px - 0.54375rem) 12px;
  resize: vertical;
  max-height: 100px;
  min-height: 32px;
  min-width: 0px;
}

<div
  class="c0 field-wrapper field-wrapper--block"
  data-role="textarea"
>
  <div
    class="c1 c2 field__main"
  >
    <div
      class="c3 c4 field"
      data-role="textarea-control"
    >
      <div
        class="c5 c6 field__input field__input--textarea field__input--readonly"
        data-readonly="true"
      >
        <textarea
          autocomplete="off"
          class="c7 c8 field__text"
          data-role="textarea-input"
          readonly=""
        >
          test readonly with value
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.text-area-tpl > render text-area with addons 1`] = `
.c4 {
  align-items: center;
  align-self: flex-end;
  display: flex;
  flex-shrink: 0;
  height: 32px;
  margin: 0px 4px 0px 0px;
  justify-content: center;
}

.c12 {
  align-items: center;
  align-self: flex-end;
  display: flex;
  flex-shrink: 0;
  height: 32px;
  margin: 0px 0px 0px 4px;
  justify-content: center;
}

.c13 .c3 {
  height: auto;
  visibility: hidden;
}

.c10 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c10::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c8 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  box-shadow: rgb(89, 102, 115) 0px 1px 0px 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
}

.c0 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c0 .c1 {
  display: flex;
  width: 100%;
}

.c0 * {
  max-width: 100%;
}

.c7 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c2 {
  display: inline-flex;
}

.c2 .c6 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c9 {
  height: auto;
}

.c5 {
  align-items: flex-start;
  line-height: 32px;
}

.c11 {
  height: 100px;
  padding: calc(16px - 0.54375rem) 12px;
  resize: vertical;
  max-height: 100px;
  min-height: 32px;
  min-width: 0px;
}

@media (pointer: coarse) {
  .c8:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c8:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

<div
  class="c0 field-wrapper field-wrapper--block"
  data-role="textarea"
>
  <div
    class="c1 c2 field__main"
  >
    <div
      class="c3 c4 c5 field-addon field-addon--textarea field-addon--before"
      data-role="textarea--addon-before-0"
    >
      Test addon before
    </div>
    <div
      class="c6 c7 field"
      data-role="textarea-control"
    >
      <div
        class="c8 c9 field__input field__input--textarea"
      >
        <textarea
          autocomplete="off"
          class="c10 c11 field__text"
          data-role="textarea-input"
          id="test-id"
        />
      </div>
    </div>
    <div
      class="c3 c12 c5 field-addon field-addon--textarea field-addon--after"
      data-role="textarea--addon-after-0"
    >
      Test addon after
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.text-area-tpl > render text-area with affixes 1`] = `
.c8 {
  align-items: center;
  background-color: transparent;
  display: flex;
  flex-shrink: 0;
  justify-content: center;
  min-width: 32px;
  margin-right: -12px;
  position: relative;
}

.c8:first-child {
  border-bottom-left-radius: 0px;
  border-top-left-radius: 0px;
}

.c12 {
  align-items: center;
  background-color: transparent;
  display: flex;
  flex-shrink: 0;
  justify-content: center;
  min-width: 32px;
}

.c12:last-child {
  border-bottom-right-radius: 0px;
  border-top-right-radius: 0px;
}

.c9 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c9::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c5 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  box-shadow: rgb(89, 102, 115) 0px 1px 0px 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
}

.c0 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c0 .c1 {
  display: flex;
  width: 100%;
}

.c0 * {
  max-width: 100%;
}

.c4 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c2 {
  display: inline-flex;
}

.c2 .c3 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c6 {
  height: auto;
}

.c10 {
  height: 100px;
  padding: calc(16px - 0.54375rem) 12px;
  resize: vertical;
  max-height: 100px;
  min-height: 32px;
  min-width: 0px;
}

.c10 .c7,
.c10 .c11 {
  height: 32px;
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c5:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

<div
  class="c0 field-wrapper field-wrapper--block"
  data-role="textarea"
>
  <div
    class="c1 c2 field__main"
  >
    <div
      class="c3 c4 field"
      data-role="textarea-control"
    >
      <div
        class="c5 c6 field__input field__input--textarea"
      >
        <div
          class="c7 c8 field__prefix field__prefix--last"
          data-role="textarea-prefix-0"
        >
          Test prefix
        </div>
        <textarea
          autocomplete="off"
          class="c9 c10 field__text"
          data-role="textarea-input"
        />
        <div
          class="c11 c12 field__suffix field__suffix--first"
          data-role="textarea-suffix-0"
        >
          Test suffix
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.text-area-tpl > render text-area with error 1`] = `
.c7 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c7::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c5 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
  box-shadow: rgb(201, 29, 29) 0px 1px 0px 0px;
}

.c0 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c0 .c1 {
  display: flex;
  width: 100%;
}

.c0 * {
  max-width: 100%;
}

.c4 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c2 {
  display: inline-flex;
}

.c2 .c3 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c6 {
  height: auto;
}

.c8 {
  height: 100px;
  padding: calc(16px - 0.54375rem) 12px;
  resize: vertical;
  max-height: 100px;
  min-height: 32px;
  min-width: 0px;
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c5:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c5.c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(201, 29, 29) 0px 1px 0px 0px;
  }
}

@media (pointer: fine) {
  .c5.c5:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

<div
  class="c0 field-wrapper field-wrapper--block"
  data-role="textarea"
>
  <div
    class="c1 c2 field__main"
  >
    <div
      class="c3 c4 field"
      data-role="textarea-control"
    >
      <div
        class="c5 c6 field__input field__input--textarea field__input--error"
      >
        <textarea
          autocomplete="off"
          class="c7 c8 field__text"
          data-role="textarea-input"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.text-area-tpl > render text-area with error-message 1`] = `
.c10 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c10 * {
  width: 1px;
  height: 1px;
}

.c8 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: custom-icons;
  font-variation-settings: normal;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c8 > span {
  display: inline-block;
}

.c8.c8 {
  max-width: unset;
}

.c9.c9 {
  color: rgb(201, 29, 29);
}

.c5 {
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  margin: 0px 0px 4px;
  padding: 4px 8px;
  background: rgb(252, 233, 233);
  color: rgb(201, 29, 29);
}

.c6 {
  display: flex;
  margin-right: 4px;
}

.c6 .c7 {
  font-size: 1.25rem;
}

.c11 {
  align-self: center;
  max-width: calc(100% - 4px - 1.25rem);
}

.c14 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c14::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c12 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
  box-shadow: rgb(201, 29, 29) 0px 1px 0px 0px;
}

.c0 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c0 .c1 {
  display: flex;
  width: 100%;
}

.c0 * {
  max-width: 100%;
}

.c4 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c2 {
  display: inline-flex;
}

.c2 .c3 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c13 {
  height: auto;
}

.c15 {
  height: 100px;
  padding: calc(16px - 0.54375rem) 12px;
  resize: vertical;
  max-height: 100px;
  min-height: 32px;
  min-width: 0px;
}

@media (pointer: coarse) {
  .c12:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c12:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c12.c12:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(201, 29, 29) 0px 1px 0px 0px;
  }
}

@media (pointer: fine) {
  .c12.c12:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

<div
  class="c0 field-wrapper field-wrapper--block"
  data-role="textarea"
>
  <div
    class="c1 c2 field__main"
  >
    <div
      class="c3 c4 field"
      data-role="textarea-control"
    >
      <div
        class="c5 message message--error field__message"
        data-role="textarea-error-message"
      >
        <div
          class="c6 messageIcon"
        >
          <i
            class="c7 c8 c9 plasma-icon plasma-icon--error plasma-icon--custom"
            data-role="plasma-icon"
            title="Error"
          >
            <span
              aria-hidden="true"
            >
              
            </span>
            <span
              class="c10 -u-unseenButRead"
              data-role="hidden-text"
            >
              Error
            </span>
          </i>
        </div>
        <div
          class="c11 messageText"
          data-role="error-text"
        >
          test error message
        </div>
      </div>
      <div
        class="c12 c13 field__input field__input--textarea field__input--error"
      >
        <textarea
          autocomplete="off"
          class="c14 c15 field__text"
          data-role="textarea-input"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.text-area-tpl > render text-area with extended properties 1`] = `
.c12 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c12 * {
  width: 1px;
  height: 1px;
}

.c10 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: custom-icons;
  font-variation-settings: normal;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c10 > span {
  display: inline-block;
}

.c10.c10 {
  max-width: unset;
}

.c15 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c15 > span {
  display: inline-block;
}

.c15.c15 {
  max-width: unset;
}

.c11.c11 {
  color: rgb(201, 29, 29);
}

.c16.c16 {
  color: rgb(175, 121, 2);
}

.c18.c18 {
  color: rgb(5, 104, 174);
}

.c6 {
  color: rgb(77, 77, 77);
  display: inline-block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1.45;
  text-transform: none;
  margin: 0px 0px 4px;
  align-self: center;
}

.c6:empty {
  display: none;
}

.c7 {
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  margin: 0px 0px 4px;
  padding: 4px 8px;
  background: rgb(252, 233, 233);
  color: rgb(201, 29, 29);
}

.c14 {
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  margin: 0px 0px 4px;
  padding: 4px 8px;
  background: rgb(254, 242, 218);
  color: rgb(22, 25, 29);
}

.c17 {
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  margin: 0px 0px 4px;
  padding: 4px 8px;
  background: rgb(230, 244, 254);
  color: rgb(5, 104, 174);
}

.c8 {
  display: flex;
  margin-right: 4px;
}

.c8 .c9 {
  font-size: 1.25rem;
}

.c13 {
  align-self: center;
  max-width: calc(100% - 4px - 1.25rem);
}

.c21 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c21::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c19 {
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
  background-color: rgb(241, 242, 244);
  box-shadow: none;
}

.c0 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c0 .c1 {
  display: flex;
  width: 100%;
}

.c0 * {
  max-width: 100%;
}

.c4 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c4 .c5 {
  display: block;
  width: fit-content;
}

.c2 {
  display: inline-flex;
}

.c2 .c3 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c20 {
  height: auto;
}

.c22 {
  height: 100px;
  padding: calc(16px - 0.54375rem) 12px;
  resize: vertical;
  max-height: 100px;
  min-height: 32px;
  min-width: 0px;
}

<div
  class="c0 field-wrapper field-wrapper--block"
  data-role="textarea"
>
  <div
    class="c1 c2 field__main"
  >
    <div
      class="c3 c4 field"
      data-role="textarea-control"
    >
      <label
        class="c5 c6 label field__label"
        data-role="textarea-label"
        for="test-id"
        id="test-id-label"
      >
        Test Label
      </label>
      <div
        class="c7 message message--error field__message"
        data-role="textarea-error-message"
        id="test-id-error"
      >
        <div
          class="c8 messageIcon"
        >
          <i
            class="c9 c10 c11 plasma-icon plasma-icon--error plasma-icon--custom"
            data-role="plasma-icon"
            title="Error"
          >
            <span
              aria-hidden="true"
            >
              
            </span>
            <span
              class="c12 -u-unseenButRead"
              data-role="hidden-text"
            >
              Error
            </span>
          </i>
        </div>
        <div
          class="c13 messageText"
          data-role="error-text"
        >
          Test error message
        </div>
      </div>
      <div
        class="c14 message message--warning field__message"
        data-role="textarea-warning-message"
        id="test-id-warning"
      >
        <div
          class="c8 messageIcon"
        >
          <i
            class="c9 c15 c16 plasma-icon plasma-icon--warning"
            data-role="plasma-icon"
            title="Warning"
          >
            <span
              aria-hidden="true"
            >
              warning
            </span>
            <span
              class="c12 -u-unseenButRead"
              data-role="hidden-text"
            >
              Warning
            </span>
          </i>
        </div>
        <div
          class="c13 messageText"
          data-role="warning-text"
        >
          Test warning message
        </div>
      </div>
      <div
        class="c17 field__message"
        data-role="textarea-info-message"
        id="test-id-info"
      >
        <div
          class="c8"
        >
          <i
            class="c9 c15 c18 plasma-icon plasma-icon--info"
            data-role="plasma-icon"
            title="Information"
          >
            <span
              aria-hidden="true"
            >
              info
            </span>
            <span
              class="c12 -u-unseenButRead"
              data-role="hidden-text"
            >
              Information
            </span>
          </i>
        </div>
        <div
          class="c13"
          data-role="info-text"
        >
          Test info message
        </div>
      </div>
      <div
        aria-expanded="true"
        class="c19 c20 field__input field__input--textarea field__input--readonly field__input--error field__input--warning"
        data-readonly="true"
        role="textbox"
      >
        <textarea
          aria-activedescendant="list-id"
          aria-autocomplete="list"
          aria-busy="true"
          aria-describedby="test-id-info test-id-warning test-id-error Test aria-describedby test-id-label"
          aria-haspopup="listbox"
          aria-label="Test Label"
          aria-owns="list-id"
          autocomplete="off"
          class="c21 c22 field__text"
          data-role="textarea-input"
          id="test-id"
          readonly=""
          tabindex="1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.text-area-tpl > render text-area with hidden label 1`] = `
.c6 {
  color: rgb(77, 77, 77);
  display: inline-block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1.45;
  text-transform: none;
  align-self: center;
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c6:empty {
  display: none;
}

.c6 * {
  width: 1px;
  height: 1px;
}

.c9 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c9::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c7 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  box-shadow: rgb(89, 102, 115) 0px 1px 0px 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
}

.c0 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c0 .c1 {
  display: flex;
  width: 100%;
}

.c0 * {
  max-width: 100%;
}

.c4 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c4 .c5 {
  display: block;
  width: fit-content;
}

.c11 .c5 {
  display: block;
  width: fit-content;
}

.c2 {
  display: inline-flex;
}

.c2 .c3 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c8 {
  height: auto;
}

.c10 {
  height: 100px;
  padding: calc(16px - 0.54375rem) 12px;
  resize: vertical;
  max-height: 100px;
  min-height: 32px;
  min-width: 0px;
}

@media (pointer: coarse) {
  .c7:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c7:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

<div
  class="c0 field-wrapper field-wrapper--block"
  data-role="textarea"
>
  <div
    class="c1 c2 field__main"
  >
    <div
      class="c3 c4 field"
      data-role="textarea-control"
    >
      <label
        class="c5 c6 label field__label -u-unseenButRead"
        data-role="textarea-label"
      >
        Test Label
      </label>
      <div
        class="c7 c8 field__input field__input--textarea"
      >
        <textarea
          autocomplete="off"
          class="c9 c10 field__text"
          data-role="textarea-input"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.text-area-tpl > render text-area with info 1`] = `
.c7 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c7::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c5 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
  box-shadow: rgb(5, 104, 174) 0px 1px 0px 0px;
}

.c0 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c0 .c1 {
  display: flex;
  width: 100%;
}

.c0 * {
  max-width: 100%;
}

.c4 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c2 {
  display: inline-flex;
}

.c2 .c3 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c6 {
  height: auto;
}

.c8 {
  height: 100px;
  padding: calc(16px - 0.54375rem) 12px;
  resize: vertical;
  max-height: 100px;
  min-height: 32px;
  min-width: 0px;
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c5:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c5.c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(5, 104, 174) 0px 1px 0px 0px;
  }
}

@media (pointer: fine) {
  .c5.c5:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

<div
  class="c0 field-wrapper field-wrapper--block"
  data-role="textarea"
>
  <div
    class="c1 c2 field__main"
  >
    <div
      class="c3 c4 field"
      data-role="textarea-control"
    >
      <div
        class="c5 c6 field__input field__input--textarea"
      >
        <textarea
          autocomplete="off"
          class="c7 c8 field__text"
          data-role="textarea-input"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.text-area-tpl > render text-area with info-message 1`] = `
.c10 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c10 * {
  width: 1px;
  height: 1px;
}

.c8 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c8 > span {
  display: inline-block;
}

.c8.c8 {
  max-width: unset;
}

.c9.c9 {
  color: rgb(5, 104, 174);
}

.c5 {
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  margin: 0px 0px 4px;
  padding: 4px 8px;
  background: rgb(230, 244, 254);
  color: rgb(5, 104, 174);
}

.c6 {
  display: flex;
  margin-right: 4px;
}

.c6 .c7 {
  font-size: 1.25rem;
}

.c11 {
  align-self: center;
  max-width: calc(100% - 4px - 1.25rem);
}

.c14 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c14::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c12 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
  box-shadow: rgb(5, 104, 174) 0px 1px 0px 0px;
}

.c0 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c0 .c1 {
  display: flex;
  width: 100%;
}

.c0 * {
  max-width: 100%;
}

.c4 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c2 {
  display: inline-flex;
}

.c2 .c3 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c13 {
  height: auto;
}

.c15 {
  height: 100px;
  padding: calc(16px - 0.54375rem) 12px;
  resize: vertical;
  max-height: 100px;
  min-height: 32px;
  min-width: 0px;
}

@media (pointer: coarse) {
  .c12:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c12:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c12.c12:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(5, 104, 174) 0px 1px 0px 0px;
  }
}

@media (pointer: fine) {
  .c12.c12:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

<div
  class="c0 field-wrapper field-wrapper--block"
  data-role="textarea"
>
  <div
    class="c1 c2 field__main"
  >
    <div
      class="c3 c4 field"
      data-role="textarea-control"
    >
      <div
        class="c5 field__message"
        data-role="textarea-info-message"
      >
        <div
          class="c6"
        >
          <i
            class="c7 c8 c9 plasma-icon plasma-icon--info"
            data-role="plasma-icon"
            title="Information"
          >
            <span
              aria-hidden="true"
            >
              info
            </span>
            <span
              class="c10 -u-unseenButRead"
              data-role="hidden-text"
            >
              Information
            </span>
          </i>
        </div>
        <div
          class="c11"
          data-role="info-text"
        >
          test info message
        </div>
      </div>
      <div
        class="c12 c13 field__input field__input--textarea"
      >
        <textarea
          autocomplete="off"
          class="c14 c15 field__text"
          data-role="textarea-input"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.text-area-tpl > render text-area with right-alignment 1`] = `
.c7 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: right;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c7::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c5 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  box-shadow: rgb(89, 102, 115) 0px 1px 0px 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
}

.c0 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c0 .c1 {
  display: flex;
  width: 100%;
}

.c0 * {
  max-width: 100%;
}

.c4 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c2 {
  display: inline-flex;
}

.c2 .c3 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c6 {
  height: auto;
}

.c8 {
  height: 100px;
  padding: calc(16px - 0.54375rem) 12px;
  resize: vertical;
  max-height: 100px;
  min-height: 32px;
  min-width: 0px;
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c5:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

<div
  class="c0 field-wrapper field-wrapper--block"
  data-role="textarea"
>
  <div
    class="c1 c2 field__main"
  >
    <div
      class="c3 c4 field"
      data-role="textarea-control"
    >
      <div
        class="c5 c6 field__input field__input--textarea"
      >
        <textarea
          autocomplete="off"
          class="c7 c8 field__text field__text--align-right"
          data-role="textarea-input"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.text-area-tpl > render text-area with tooltip 1`] = `
.c7 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c7::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c5 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  box-shadow: rgb(89, 102, 115) 0px 1px 0px 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
}

.c0 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c0 .c1 {
  display: flex;
  width: 100%;
}

.c0 * {
  max-width: 100%;
}

.c4 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c2 {
  display: inline-flex;
}

.c2 .c3 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c6 {
  height: auto;
}

.c8 {
  height: 100px;
  padding: calc(16px - 0.54375rem) 12px;
  resize: vertical;
  max-height: 100px;
  min-height: 32px;
  min-width: 0px;
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c5:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

<div
  class="c0 field-wrapper field-wrapper--block"
  data-role="textarea"
>
  <div
    class="c1 c2 field__main"
  >
    <div
      class="c3 c4 field"
      data-role="textarea-control"
    >
      <div
        class="test-tooltip field__tooltip"
      >
        Test tooltip
      </div>
      <div
        class="c5 c6 field__input field__input--textarea"
      >
        <textarea
          autocomplete="off"
          class="c7 c8 field__text"
          data-role="textarea-input"
          id="test-id"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.text-area-tpl > render text-area with warning 1`] = `
.c7 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c7::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c5 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
  box-shadow: rgb(175, 121, 2) 0px 1px 0px 0px;
}

.c0 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c0 .c1 {
  display: flex;
  width: 100%;
}

.c0 * {
  max-width: 100%;
}

.c4 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c2 {
  display: inline-flex;
}

.c2 .c3 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c6 {
  height: auto;
}

.c8 {
  height: 100px;
  padding: calc(16px - 0.54375rem) 12px;
  resize: vertical;
  max-height: 100px;
  min-height: 32px;
  min-width: 0px;
}

@media (pointer: coarse) {
  .c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c5:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c5.c5:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c5.c5:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

<div
  class="c0 field-wrapper field-wrapper--block"
  data-role="textarea"
>
  <div
    class="c1 c2 field__main"
  >
    <div
      class="c3 c4 field"
      data-role="textarea-control"
    >
      <div
        class="c5 c6 field__input field__input--textarea field__input--warning"
      >
        <textarea
          autocomplete="off"
          class="c7 c8 field__text"
          data-role="textarea-input"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.text-area-tpl > render text-area with warning-message 1`] = `
.c10 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c10 * {
  width: 1px;
  height: 1px;
}

.c8 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c8 > span {
  display: inline-block;
}

.c8.c8 {
  max-width: unset;
}

.c9.c9 {
  color: rgb(175, 121, 2);
}

.c5 {
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  margin: 0px 0px 4px;
  padding: 4px 8px;
  background: rgb(254, 242, 218);
  color: rgb(22, 25, 29);
}

.c6 {
  display: flex;
  margin-right: 4px;
}

.c6 .c7 {
  font-size: 1.25rem;
}

.c11 {
  align-self: center;
  max-width: calc(100% - 4px - 1.25rem);
}

.c14 {
  background-color: transparent;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  box-sizing: border-box;
  color: inherit;
  flex-grow: 1;
  font-style: inherit;
  font-weight: inherit;
  font-family: inherit;
  font-size: 100%;
  line-height: 1.45;
  outline: none;
  padding: 0px 12px;
  text-align: inherit;
  text-overflow: ellipsis;
  text-transform: inherit;
  min-width: 0px;
  width: 100%;
}

.c14::placeholder {
  font-style: italic;
  color: rgb(89, 102, 115);
  opacity: 1;
}

.c12 {
  background-color: rgb(241, 242, 244);
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  outline: transparent solid 1px;
  height: 32px;
  box-shadow: rgb(175, 121, 2) 0px 1px 0px 0px;
}

.c0 {
  overflow-wrap: break-word;
  word-break: break-word;
  flex-direction: column;
  display: flex;
  width: 100%;
}

.c0 .c1 {
  display: flex;
  width: 100%;
}

.c0 * {
  max-width: 100%;
}

.c4 {
  box-sizing: border-box;
  flex-grow: 1;
  width: 100%;
}

.c2 {
  display: inline-flex;
}

.c2 .c3 {
  flex: 1 1 160px;
  max-width: 100%;
}

.c13 {
  height: auto;
}

.c15 {
  height: 100px;
  padding: calc(16px - 0.54375rem) 12px;
  resize: vertical;
  max-height: 100px;
  min-height: 32px;
  min-width: 0px;
}

@media (pointer: coarse) {
  .c12:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c12:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: coarse) {
  .c12.c12:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

@media (pointer: fine) {
  .c12.c12:hover {
    box-shadow: rgb(213, 0, 117) 0px 2px 0px 0px;
  }
}

<div
  class="c0 field-wrapper field-wrapper--block"
  data-role="textarea"
>
  <div
    class="c1 c2 field__main"
  >
    <div
      class="c3 c4 field"
      data-role="textarea-control"
    >
      <div
        class="c5 message message--warning field__message"
        data-role="textarea-warning-message"
      >
        <div
          class="c6 messageIcon"
        >
          <i
            class="c7 c8 c9 plasma-icon plasma-icon--warning"
            data-role="plasma-icon"
            title="Warning"
          >
            <span
              aria-hidden="true"
            >
              warning
            </span>
            <span
              class="c10 -u-unseenButRead"
              data-role="hidden-text"
            >
              Warning
            </span>
          </i>
        </div>
        <div
          class="c11 messageText"
          data-role="warning-text"
        >
          test warning message
        </div>
      </div>
      <div
        class="c12 c13 field__input field__input--textarea field__input--warning"
      >
        <textarea
          autocomplete="off"
          class="c14 c15 field__text"
          data-role="textarea-input"
        />
      </div>
    </div>
  </div>
</div>
`;
